# Grug-Discord-Bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  postgres.Dockerfile  pyproject.toml
.github/workflows/: build_and_release.yml  deploy_gh_pages.yml  mkdocs.yml  pr_checks.yml  pre_commit_check.yml  publish_image.yml  publish_images.yml  run_tests.yml  tag_and_release.yml
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/about/privacy_policy/: index.html
0.0.2/search/: search_index.json
0.0.2/self_hosting/: index.html
alembic/: README.md  env.py
alembic/versions/: 28de048f24ae_ai_image.py  66e7c13a3408_init.py  6983b8e2e456_init.py  7805e4cfcfc8_init.py
assets/bot_voices/: reference_text.yml
config/: secrets.template.env
docs/: index.md
docs/about/: discord_bot_justifications.md  privacy_policy.md  terms_of_service.md
grug/: __main__.py  ai_agent.py  ai_tts_client.py  db.py  discord_bot.py  discord_client.py  discord_speech_recognition.py  discord_voice_client.py  models.py  scheduler.py  settings.py  utils.py
grug/ai_agents/: base_react_agent.py  discord_voice_agent.py  discord_voice_listening_agent.py  should_respond_agent.py
grug/ai_tools/: __init__.py  dice_roller.py  image_generation.py  information_search.py  initiative_tracker.py  reminders.py  session_notes.py  session_scheduling.py
grug/discord_client/: __init__.py  client.py  message_handler.py  voice_handler.py  voice_utils.py
sandbox/stt/: README.md
sandbox/tts/: README.md  tts_sandbox.ipynb
(+2 files in other folders)
